--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,17 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-            <!-- HEADER -->
+    <!-- HEADER -->
     <header class="header">
         <div class="container header-container">
             <nav class="header-navigation">
@@ -27,14 +33,16 @@
             </nav>
             <address class="header-contacts">
                 <ul class="header-contacts-list list">
-                    <li class="header-contacts-item"><a class="header-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="header-contacts-item"><a class="header-contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li class="header-contacts-item"><a class="header-contacts-link link"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="header-contacts-item"><a class="header-contacts-link link" href="tel:+110001111111">+11
+                            (000) 111-11-11</a></li>
                 </ul>
             </address>
-            </div>
+        </div>
     </header>
     <!-- HERO -->
-    <main>  
+    <main>
         <section class="hero section">
             <div class="container hero-container">
                 <div class="hero-wrapp">
@@ -43,84 +51,97 @@
                 </div>
             </div>
         </section>
-                <!-- OUR FEATURES -->
+        <!-- OUR FEATURES -->
         <section class="our-features section">
             <div class="container">
                 <h2 class="our-features-title" hidden>Our features</h2>
                 <ul class="our-features-list list">
                     <li class="our-features-item">
                         <h3 class="our-features-secondary-title">Strategy</h3>
-                        <p class="our-features-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                        <p class="our-features-text">Our goal is to identify the business problem to walk away with the
+                            perfect and creative solution. </p>
                     </li>
                     <li class="our-features-item">
                         <h3 class="our-features-secondary-title">Punctuality</h3>
-                        <p class="our-features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        <p class="our-features-text">Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.</p>
                     </li>
                     <li class="our-features-item">
                         <h3 class="our-features-secondary-title">Diligence</h3>
-                        <p class="our-features-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        <p class="our-features-text">Research and confirm brands that present the strongest digital
+                            growth opportunities and minimize risk.</p>
                     </li>
                     <li class="our-features-item">
                         <h3 class="our-features-secondary-title">Technologies</h3>
-                        <p class="our-features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        <p class="our-features-text">Design practice focused on digital experiences. We bring forth a
+                            deep passion for problem-solving.</p>
                     </li>
                 </ul>
             </div>
         </section>
-    <!-- WHAT ARE WE DOING -->
+        <!-- WHAT ARE WE DOING -->
         <section class="what-are-we-doing section">
             <div class="container">
                 <h2 class="what-are-we-doing-title">What are we doing</h2>
                 <ul class="what-are-we-doing-list list">
-                    <li class="what-are-we-doing-item"><img src="./images/Desktop.jpg" alt="desktop" width="360" height="300"></li>
-                    <li class="what-are-we-doing-item"><img src="./images/laptop.jpg" alt="laptop and phone" width="360" height="300"></li>
-                    <li class="what-are-we-doing-item"><img src="./images/Phone.jpg" alt="tablet" width="360" height="300"></li>
+                    <li class="what-are-we-doing-item"><img src="./images/Desktop.jpg" alt="desktop" width="360"
+                            height="300"></li>
+                    <li class="what-are-we-doing-item"><img src="./images/laptop.jpg" alt="laptop and phone" width="360"
+                            height="300"></li>
+                    <li class="what-are-we-doing-item"><img src="./images/Phone.jpg" alt="tablet" width="360"
+                            height="300"></li>
                 </ul>
             </div>
         </section>
-    <!-- OUR TEAM -->
+        <!-- OUR TEAM -->
         <section class="our-team section">
             <div class="container">
                 <div class="our-team-wrapp">
                     <h2 class="our-team-title">Our Team</h2>
                     <ul class="our-team-list list">
                         <li class="our-team-item">
-                            <img class="out-team-img" src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
+                            <img class="out-team-img" src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264"
+                                height="260">
                             <h3 class="our-team-secondary-title">Mark Guerrero</h3>
                             <p class="our-team-text">Product Designer</p>
                         </li>
                         <li class="our-team-item">
-                            <img class="out-team-img" src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
+                            <img class="out-team-img" src="./images/tom-ford.jpg" alt="Tom Ford" width="264"
+                                height="260">
                             <h3 class="our-team-secondary-title">Tom Ford</h3>
                             <p class="our-team-text">Frontend Developer</p>
                         </li>
                         <li class="our-team-item">
-                            <img class="out-team-img" src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
+                            <img class="out-team-img" src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264"
+                                height="260">
                             <h3 class="our-team-secondary-title">Camila Garcia</h3>
                             <p class="our-team-text">Marketing</p>
                         </li>
                         <li class="our-team-item">
-                            <img class="out-team-img" src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264    " height="260">
+                            <img class="out-team-img" src="./images/daniel-wilson.jpg" alt="Daniel Wilson"
+                                width="264    " height="260">
                             <h3 class="our-team-secondary-title">Daniel Wilson</h3>
                             <p class="our-team-text">UI Designer</p>
                         </li>
                     </ul>
                 </div>
             </div>
-            </section>
-        </main>
+        </section>
+    </main>
     <!-- FOOTER -->
-        <footer class="footer">
-            <div class="container">
-                <div class="footer-wrapp">
-                    <a class="footer-logo link" href="./index.html">
-                        <span class="footer-logo-web">Web</span><span class="fooret-logo-studio">Studio</span> 
-                    </a>
-                    <p class="footer-text">
-                        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-                    </p>
-                </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrapp">
+                <a class="footer-logo link" href="./index.html">
+                    <span class="footer-logo-web">Web</span><span class="fooret-logo-studio">Studio</span>
+                </a>
+                <p class="footer-text">
+                    Increase the flow of customers and sales for your business with digital marketing & growth
+                    solutions.
+                </p>
             </div>
+        </div>
     </footer>
 </body>
+
 </html>
