--- a/portfolio.html
+++ b/portfolio.html
@@ -57,48 +57,66 @@
                     <ul class="filter-cards list">
                         <li class="filter-cards-item">
                             <img class="filter-cards-img" src="./images/portfolio-photo/1.jpg" alt="seven scrins">
-                            <h3 class="filter-cards-title">Banking App Interface Concept</h3>
-                            <p class="filter-cards-text">App</p>
+                            <div class="filret-card-item-wrap">
+                                <h3 class="filter-cards-title">Banking App Interface Concept</h3>
+                                <p class="filter-cards-text">App</p>
+                            </div>
                         </li>
                         <li class="filter-cards-item">
                             <img class="filter-cards-img" src="./images/portfolio-photo/2.jpg" alt="qr code scaner" width="360" height="300">
-                            <h3 class="filter-cards-title">Cashless Payment</h3>
-                            <p class="filter-cards-text">Marketing</p>
+                            <div class="filret-card-item-wrap">
+                                <h3 class="filter-cards-title">Cashless Payment</h3>
+                                <p class="filter-cards-text">Marketing</p>
+                            </div>
                         </li>
                         <li class="filter-cards-item">
                             <img class="filter-cards-img" src="./images/portfolio-photo/3.jpg" alt="laptop and phone" width="360" height="300">
-                            <h3 class="filter-cards-title">Meditaion App</h3>
-                            <p class="filter-cards-text">App</p>
+                            <div class="filret-card-item-wrap">
+                                <h3 class="filter-cards-title">Meditaion App</h3>
+                                <p class="filter-cards-text">App</p>
+                            </div>
                         </li>
                         <li class="filter-cards-item">
                             <img class="filter-cards-img" src="./images/portfolio-photo/4.jpg" alt="car and phone" width="360" height="300">
-                            <h3 class="filter-cards-title">Taxi Service</h3>
-                            <p class="filter-cards-text">Marketing</p>
+                            <div class="filret-card-item-wrap">
+                                <h3 class="filter-cards-title">Taxi Service</h3>
+                                <p class="filter-cards-text">Marketing</p>
+                            </div>
                         </li>
                         <li class="filter-cards-item">
                             <img class="filter-cards-img" src="./images/portfolio-photo/5.jpg" alt="phone and screens" width="360" height="300">
-                            <h3 class="filter-cards-title">Screen Illustrations</h3>
-                            <p class="filter-cards-text">Design</p>
+                            <div class="filret-card-item-wrap">
+                                <h3 class="filter-cards-title">Screen Illustrations</h3>
+                                <p class="filter-cards-text">Design</p>
+                            </div>
                         </li>
                         <li class="filter-cards-item">
                             <img class="filter-cards-img" src="./images/portfolio-photo/6.jpg" alt="women watch in phone" width="360" height="300">
-                            <h3 class="filter-cards-title">Screen Illustrations</h3>
-                            <p class="filter-cards-text">Marketing</p>
+                            <div class="filret-card-item-wrap">
+                                <h3 class="filter-cards-title">Screen Illustrations</h3>
+                                <p class="filter-cards-text">Marketing</p>
+                            </div>
                         </li>
                         <li class="filter-cards-item">
                             <img class="filter-cards-img" src="./images/portfolio-photo/7.jpg" alt="Instagram stories content" width="360" height="300">
-                            <h3 class="filter-cards-title">Instagram Stories Concept</h3>
-                            <p class="filter-cards-text">Design</p>
+                            <div class="filret-card-item-wrap">
+                                <h3 class="filter-cards-title">Instagram Stories Concept</h3>
+                                <p class="filter-cards-text">Design</p>
+                            </div>
                         </li>
                         <li class="filter-cards-item">
                             <img class="filter-cards-img" src="./images/portfolio-photo/8.jpg" alt="fruits organic" width="360" height="300">
-                            <h3 class="filter-cards-title">Organic Food</h3>
-                            <p class="filter-cards-text">Web Site</p>
+                            <div class="filret-card-item-wrap">
+                                <h3 class="filter-cards-title">Organic Food</h3>
+                                <p class="filter-cards-text">Web Site</p>
+                            </div>
                         </li>
                         <li class="filter-cards-item">
                             <img class="filter-cards-img" src="./images/portfolio-photo/9.jpg" alt="cup of coffee" width="360" height="300" >
-                            <h3 class="filter-cards-title">Fresh Coffee</h3>
-                            <p class="filter-cards-text">Web Site</p>
+                            <div class="filret-card-item-wrap">
+                                <h3 class="filter-cards-title">Fresh Coffee</h3>
+                                <p class="filter-cards-text">Web Site</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
